Till now i just fixed img not showing up on github Page

--- a/services.css
+++ b/services.css
@@ -241,7 +241,7 @@ a{
 
 .banar{
 
-    background: url("/images/Section.png");
+    background: url("./images/Section.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
